# menu-intelligence-suite

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  DEMO.md  Dockerfile  Makefile  QUICKSTART.md  README.md  app_simple.py  docker-compose.yml  generate_local_data.py  pyproject.toml  requirements.txt  start_demo.bat  test_api.py  ui_simple.py
.github/workflows/: ci.yml
data/cache/: bm25_retriever.pkl  faiss_metadata.pkl
migrations/: 001_init.sql  002_indexes.sql
src/: __init__.py
src/api/: config.py  deps.py  deps_local.py  logging_conf.py  main.py  main_local.py  schemas.py
src/api/routers/: dedup.py  ingest.py  metrics.py  recommend.py  search.py  search_local.py  tagging.py
src/app/: ui.py
src/core/: __init__.py  dedup.py  embeddings.py  eval.py  hybrid.py  normalize.py  recommend.py  sparse.py  tagging.py  utils.py
src/core/vector_store/: __init__.py  base.py  faiss_store.py  pgvector_store.py
src/data/: generate_data.py
src/data/seed/: .gitkeep
src/workers/: jobs.py  queue.py
tests/: test_dedup.py  test_eval.py  test_search.py  test_tagging.py
